tests/parser/var_err6.expected
Syntax Error: line 4:
Unexpected token (TOK_SEMICOLON, ';'), likely missing a(n)  
  'TOK_RPAREN' or
Possibly due to malformed or missing:
  Non-terminal: 'Variable' or
  Non-terminal: 'Type'
