tests/parser/var_err6.mtp
(* variable section start *)

(* missing id, assignment, and type*)
var ;

begin

end
.